--- a/templates/admin.html
+++ b/templates/admin.html
@@ -58,7 +58,7 @@
                 <hr class="text-secondary">
 
                 <a class="nav-link" href="{{ url_for('add_new_post') }}">Create New Post</a>
-                <a class="nav-link" href="{{ url_for('get_all_posts') }}">View Blog</a>
+                <a class="nav-link" href="{{ url_for('home') }}">Go Home</a>
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </div>
 
