--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="userDropdown">
                             <li>
-                                <a class="dropdown-item" href="{{ url_for('profile', user_id=current_user.id) }}">
+                                <a class="dropdown-item" href="{{ url_for('profile', user_id=current_user.pk) }}">
                                     👤 Profile
                                 </a>
                             </li>
