--- a/templates/post.html
+++ b/templates/post.html
@@ -85,7 +85,7 @@
             {{ post.body|safe }}
         </div>
 
-        {% if current_user.is_authenticated and (current_user.id == post.author_id or current_user.is_admin) %}
+        {% if current_user.is_authenticated and (current_user == post.author or current_user.is_admin) %}
         <div class="d-flex justify-content-end mt-5">
           <a class="btn btn-outline-dark btn-sm rounded-pill px-4" href="{{ url_for('edit_post', post_id=post.id) }}">
             <i class="fas fa-pencil-alt me-2"></i>Edit Article
